# Labeling

./: LICENSE  Labeling.py  LabelingTest.py  MetaSegmentMerger.py  README.md  bsoncontainer.py  main.py  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb
.github/workflows/: build.yml  python-package.yml  python-publish.yml
labeling/: Labeling.py  __init__.py  bsoncontainer.py
src/labeling/: Labeling.py  LabelingData.py  __init__.py  _version.py
test/: BsonContainerTest.py  LabelingTest.py  example2.bson  example2.tif  test.lbl.json  test_labeling.py  test_labelingdata.py
tests/: test.tif  test_labeling.py  test_labelingdata.py
tutorial/: tutorial.ipynb  up_big.tif
