[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "labeling"
version = "0.1.14"
description = "A package to create labeling/segmentation information based on pixel values."
license = "BSD-3-Clause"
authors = [{name = "Tom Burke"}]
readme = "README.md"
keywords = ["labeling", "segmentation", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
]

requires-python = ">=3.9"
dependencies = [
    "tifffile",
    "pillow",
    "numpy",
]

[project.optional-dependencies]
examples = ["scipy"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "ruff",
    "build",
    "validate-pyproject[all]",
]

[project.urls]
homepage = "https://github.com/Labelings/pyLabeling"
source = "https://github.com/Labelings/pyLabeling"
tracker = "https://github.com/Labelings/pyLabeling/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
extend-exclude = ["bin", "build", "dist"]

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402", "F401"]
